--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,19 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+import dependencies.Versions
 
 buildscript {
-    ext.kotlin_version = '1.5.0-RC'
-    ext.hilt_version = '2.33-beta'
-
+    ext.kotlin_version = Versions.kotlin
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.kotlin}"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.google.dagger:hilt-android-gradle-plugin:${Versions.hilt}"
     }
+
 }
 
 allprojects {
