--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,10 @@ dependencies {
     implementation Square.retrofit_gson
     implementation Square.okHttp
     implementation Square.leak_canary
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.google.android.material:material:1.3.0'
 
     kapt AnnotationProcessing.hilt_compiler
     //kapt AnnotationProcessing.compose_compiler
