--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.kotlin}"
 
         classpath "com.google.dagger:hilt-android-gradle-plugin:${Versions.hilt}"
+        classpath 'com.google.gms:google-services:4.3.5'
     }
 
 }
