- update AuthActivity.kt -> update firebase code in order to not use deprecated method onActivityResult
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ android {
 
     buildFeatures {
         //compose true
+        viewBinding= true
+        dataBinding = true
     }
 
     buildTypes {
