--- a/build.gradle
+++ b/build.gradle
@@ -4,23 +4,22 @@ buildscript {
     ext.kotlin_version = Versions.kotlin
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath 'com.android.tools.build:gradle:7.0.0-alpha14'
 
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.kotlin}"
 
         classpath "com.google.dagger:hilt-android-gradle-plugin:${Versions.hilt}"
         classpath 'com.google.gms:google-services:4.3.5'
     }
-
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
