--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,6 +104,10 @@ dependencies {
     implementation Firebase.firebase_auth_ui
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.test:monitor:1.3.0'
+    implementation 'com.google.android.material:material:1.2.1'
+    androidTestImplementation 'junit:junit:4.12'
+    androidTestImplementation 'junit:junit:4.12'
 
     kapt AnnotationProcessing.hilt_compiler
     //kapt AnnotationProcessing.compose_compiler
@@ -121,5 +125,10 @@ dependencies {
 
     // compose testing
     //implementation InstrumentationTest.compose_ui
+
+    // Optional -- Robolectric environment
+    testImplementation 'androidx.test:core:1.3.0'
+    // Optional -- Mockito framework
+    testImplementation 'org.mockito:mockito-core:1.10.19'
 
 }
