--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.0-alpha14'
 
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.kotlin}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.32"
 
         classpath "com.google.dagger:hilt-android-gradle-plugin:${Versions.hilt}"
         classpath 'com.google.gms:google-services:4.3.5'
