--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,7 @@ dependencies {
     implementation Google.hilt_android
 
     implementation Glide.glide
+    implementation("io.coil-kt:coil:1.2.1")
 
     implementation Jetbrains.kotlin_stdlib
 
@@ -105,12 +106,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.test:monitor:1.3.0'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    androidTestImplementation 'junit:junit:4.12'
-    androidTestImplementation 'junit:junit:4.12'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    androidTestImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'junit:junit:4.13.2'
 
     kapt AnnotationProcessing.hilt_compiler
     //kapt AnnotationProcessing.compose_compiler
@@ -133,5 +134,7 @@ dependencies {
     testImplementation 'androidx.test:core:1.3.0'
     // Optional -- Mockito framework
     testImplementation 'org.mockito:mockito-core:1.10.19'
+
+
 
 }
