--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,4 @@
-import dependencies.AnnotationProcessing
-import dependencies.Firebase
-import dependencies.InstrumentationTest
-import dependencies.Jetbrains
-import dependencies.Square
-import dependencies.UnitTest
-import dependencies.Versions
-import dependencies.AndroidX
-import dependencies.Google
-import dependencies.Glide
+import dependencies.*
 
 plugins {
     id 'com.android.application'
@@ -33,8 +24,9 @@ android {
 
     buildFeatures {
         //compose true
-        viewBinding= true
-        dataBinding = true
+        dataBinding true
+        viewBinding true
+
     }
 
     buildTypes {
@@ -73,6 +65,11 @@ dependencies {
     implementation AndroidX.constraint_layout
     implementation AndroidX.nav_fragment_ktx
     implementation AndroidX.nav_ui_ktx
+    implementation AndroidX.navigation_fragment_ktx
+    implementation AndroidX.navigation_ui_ktx
+    implementation AndroidX.sliding_panel_layout
+
+
 //    implementation AndroidX.compose_ui
 //    implementation AndroidX.compose_foundation
 //    implementation AndroidX.compose_material
@@ -113,6 +110,13 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
+
+    //Timber for easier Logs
+    def timberVersion = "4.7.1"
+    implementation "com.jakewharton.timber:timber:$timberVersion"
+
     androidTestImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'junit:junit:4.13.2'
 
@@ -136,7 +140,7 @@ dependencies {
     // Optional -- Robolectric environment
     testImplementation 'androidx.test:core:1.3.0'
     // Optional -- Mockito framework
-    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'org.mockito:mockito-core:3.8.0'
 
 
 
