--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.openclassrooms.realestatemanager">
 
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the "MyLocation" functionality.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <uses-feature android:name="android.hardware.camera" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -16,10 +23,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
         <activity
-            android:name="com.openclassrooms.realestatemanager.presentation.ui.BaseActivity"
+            android:name=".presentation.MainActivity"
             android:exported="true" />
-        <activity android:name="com.openclassrooms.realestatemanager.presentation.ui.auth.AuthActivity">
+        <activity
+            android:name=".presentation.ui.BaseActivity"
+            android:exported="true" />
+        <activity android:name=".presentation.ui.auth.AuthActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,17 +50,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.openclassrooms.realestatemanager.presentation.ui.property_list.MainActivity"
+            android:name=".presentation.ui.property_list.MainActivity2"
             android:label="@string/title_property_list"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.openclassrooms.realestatemanager.presentation.ui.property.PropertyDetailActivity"
+            android:name=".presentation.ui.property.PropertyDetailActivity"
             android:label="@string/title_property_detail"
-            android:parentActivityName="com.openclassrooms.realestatemanager.presentation.ui.property_list.MainActivity"
+            android:parentActivityName=".presentation.ui.property_list.MainActivity2"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.openclassrooms.realestatemanager.presentation.ui.property_list.MainActivity" />
+                android:value="com.openclassrooms.realestatemanager.presentation.ui.property_list.MainActivity2" />
         </activity>
         <activity android:name=".presentation.MainActivity2">
             <intent-filter>
