--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ import dependencies.Versions
 
 buildscript {
     ext.kotlin_version = Versions.kotlin
+    ext.navigation_version = "2.1.0"
     repositories {
         google()
         mavenCentral()
