--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.32"
 
         classpath "com.google.dagger:hilt-android-gradle-plugin:${Versions.hilt}"
-        classpath 'com.google.gms:google-services:4.3.5'
+        classpath "com.google.gms:google-services:4.3.5"
     }
 }
 
