- Create PropertyRepositoryTest.kt - FakeServer for future location geocoding Test
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -139,6 +139,12 @@ dependencies {
     kapt AnnotationProcessing.glide_compiler
     kapt AnnotationProcessing.room_compiler
 
+    //mock
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.11.0'
+
     // TESTING
     testImplementation UnitTest.jupiter_api
     testImplementation UnitTest.jupiter_params
