--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ plugins {
     id 'dagger.hilt.android.plugin'
     id 'com.google.gms.google-services'
     id 'com.google.secrets_gradle_plugin' version '0.5'
+    id 'androidx.navigation.safeargs.kotlin'
 
 }
 
@@ -92,6 +93,8 @@ dependencies {
     implementation AndroidX.hilt_lifecycle_viewmodel
     implementation AndroidX.recycler_view
     implementation AndroidX.activity
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
 
     implementation Google.material
     implementation Google.hilt_android
