--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,6 +130,10 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxkotlin:2.4.0"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
 
+
+    //Coil : Image loading library
+    implementation("io.coil-kt:coil:1.2.1")
+
     //Timber for easier Logs
     def timberVersion = "4.7.1"
     implementation "com.jakewharton.timber:timber:$timberVersion"
