--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,6 +107,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'androidx.fragment:fragment-ktx:1.3.3'
 
     implementation Google.material
     implementation Google.hilt_android
