--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,6 @@ plugins {
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
     id 'dagger.hilt.android.plugin'
-    id 'com.google.gms.google-services'
     id 'com.google.secrets_gradle_plugin' version '0.5'
     id 'androidx.navigation.safeargs.kotlin'
 }
@@ -81,6 +80,7 @@ dependencies {
     implementation AndroidX.navigation_fragment_ktx
     implementation AndroidX.navigation_ui_ktx
     implementation AndroidX.sliding_panel_layout
+    kapt("org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.2.0")
 
 
 //    implementation AndroidX.compose_ui
@@ -122,7 +122,6 @@ dependencies {
     implementation Square.okHttp
     implementation Square.leak_canary
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
 
     //Firebase
@@ -138,6 +137,7 @@ dependencies {
 
     def lifecycle_version = "2.3.1"
     def arch_version = "2.1.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.0"
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
