--- a/build.gradle
+++ b/build.gradle
@@ -11,16 +11,16 @@ buildscript {
     }
     dependencies {
         def nav_version = "2.3.5"
+        classpath 'com.google.gms:google-services:4.3.8'
+
         classpath "com.android.tools.build:gradle:7.0.0-alpha15"
 
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.kotlin}"
-
-        classpath("org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.2.0")
+        //classpath "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.2.0"
 
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
         classpath "com.google.dagger:hilt-android-gradle-plugin:${Versions.hilt}"
-        classpath "com.google.gms:google-services:4.3.7"
+
     }
 }
 
