--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,6 +109,8 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'androidx.fragment:fragment-ktx:1.3.3'
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
 
     implementation Google.material
     implementation Google.hilt_android
