--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,7 @@ plugins {
     id 'dagger.hilt.android.plugin'
     id 'com.google.gms.google-services'
     id 'com.google.secrets_gradle_plugin' version '0.5'
-    id 'androidx.navigation.safeargs.kotlin'
-
+    id("androidx.navigation.safeargs.kotlin")
 }
 
 android {
@@ -53,13 +52,7 @@ android {
         jvmTarget = Versions.jvmTarget
         useIR = true
     }
-//    composeOptions {
-//        def kotlin_compiler_version = Versions.kotlin
-//        kotlinCompilerVersion kotlin_compiler_version
-//
-//        def kotlin_compiler_extension_version = Versions.kotlin_compiler_extension
-//        kotlinCompilerExtensionVersion kotlin_compiler_extension_version
-//    }
+
     packagingOptions {
         exclude "META-INF/AL2.0"
         exclude "META-INF/LGPL2.1"
@@ -97,8 +90,11 @@ dependencies {
     implementation AndroidX.hilt_lifecycle_viewmodel
     implementation AndroidX.recycler_view
     implementation AndroidX.activity
-    implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
-    implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
+
+    implementation("androidx.navigation:navigation-dynamic-features-fragment:2.3.5")
+
+    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0"
+    implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.test:monitor:1.3.0'
