--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,6 +124,8 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxkotlin:2.4.0"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
 
+    //ViewPager Dots
+    implementation 'com.tbuonomo:dotsindicator:4.2'
 
     def lifecycle_version = "2.3.1"
     def arch_version = "2.1.0"
