--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,6 +126,7 @@ dependencies {
 
     //ViewPager Dots
     implementation 'com.tbuonomo:dotsindicator:4.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     def lifecycle_version = "2.3.1"
     def arch_version = "2.1.0"
