--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'androidx.fragment:fragment-ktx:1.3.3'
 
+    //Play Services for location
+    implementation "com.google.android.gms:play-services-location:18.0.0"
 
     implementation Google.material
     implementation Google.hilt_android
