--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,9 +96,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'androidx.fragment:fragment-ktx:1.3.3'
 
-    //Play Services for location
-    implementation "com.google.android.gms:play-services-location:18.0.0"
-
     implementation Google.material
     implementation Google.hilt_android
 
@@ -224,7 +221,10 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test:rules:1.3.0'
 
+    //Mapbox
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.6.1'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v9:0.9.0'
+
 
 }
 secrets {
