- update mapbox gradle
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,10 @@ plugins {
     id("androidx.navigation.safeargs.kotlin")
 }
 apply plugin: 'kotlin-android'
-
+def mapboxApiToken = project.properties['MAPBOX_ACCESS_TOKEN'] ?: System.getenv('MAPBOX_ACCESS_TOKEN')
+if (mapboxApiToken == null) {
+    throw new Exception("API token is not specified.")
+}
 android {
     compileSdkVersion Versions.compileSdk
 
@@ -25,6 +28,9 @@ android {
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunner "com.openclassrooms.realestatemanager.repository.HiltTestRunner"
+
+        buildConfigField "String", "MAPBOX_API_TOKEN", "\"$mapboxApiToken\""
+        resValue "string", "mapbox_access_token", mapboxApiToken
 
         kapt {
             arguments {
