--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,8 @@ android {
         versionName "1.0"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        testInstrumentationRunner "com.openclassrooms.realestatemanager.repository.HiltTestRunner"
+       // testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.openclassrooms.realestatemanager.HiltTestRunner"
 
         buildConfigField "String", "MAPBOX_API_TOKEN", "\"$mapboxApiToken\""
         resValue "string", "mapbox_access_token", mapboxApiToken
@@ -72,6 +72,7 @@ android {
 }
 
 dependencies {
+    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")
 
     implementation AndroidX.core_ktx
     implementation AndroidX.app_compat
@@ -226,6 +227,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test:rules:1.3.0'
+
+    testImplementation("com.google.dagger:hilt-android-testing:2.35.1")
+
+    androidTestImplementation("com.google.dagger:hilt-android-testing:2.35.1")
+
 
     //Mapbox
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.6.1'
