--- a/app/build.gradle
+++ b/app/build.gradle
@@ -216,22 +216,18 @@ dependencies {
 
     //Hilt
     // For Robolectric tests.
-    //  testImplementation 'com.google.dagger:hilt-android-testing:2.35'
+      testImplementation 'com.google.dagger:hilt-android-testing:2.35'
     // ...with Kotlin.
-    //kaptTest 'com.google.dagger:hilt-android-compiler:2.35'
+    kaptTest 'com.google.dagger:hilt-android-compiler:2.35'
     // For instrumented tests.
-    // androidTestImplementation 'com.google.dagger:hilt-android-testing:2.35'
-    //kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.35'
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.35'
+    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.35'
+
 
     //Espresso
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test:rules:1.3.0'
-
-    testImplementation("com.google.dagger:hilt-android-testing:2.35.1")
-
-    androidTestImplementation("com.google.dagger:hilt-android-testing:2.35.1")
-
 
     //Mapbox
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.6.1'
