- update PropertyDetailFragment.kt -> update sdtatic map with dynamic value
Signed-off-by: Laurent Tizzone <laurent.Tizzone@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ plugins {
 apply plugin: 'kotlin-android'
 def mapboxApiToken = project.properties['MAPBOX_ACCESS_TOKEN'] ?: System.getenv('MAPBOX_ACCESS_TOKEN')
 def hereApiId = project.properties['SDK_APP_ID'] ?: System.getenv('SDK_APP_ID')
-def hereApiCode= project.properties['SDK_APP_CODE'] ?: System.getenv('SDK_APP_CODE')
-def hereLicenseKey= project.properties['SDK_LICENSE_KEY'] ?: System.getenv('SDK_LICENSE_KEY')
+def hereApiCode = project.properties['SDK_APP_CODE'] ?: System.getenv('SDK_APP_CODE')
+def hereLicenseKey = project.properties['SDK_LICENSE_KEY'] ?: System.getenv('SDK_LICENSE_KEY')
 
 if (mapboxApiToken == null) {
     throw new Exception("API token is not specified.")
@@ -30,7 +30,7 @@ android {
         versionName "1.0"
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
-       // testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        // testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunner "com.openclassrooms.realestatemanager.HiltTestRunner"
 
         buildConfigField "String", "MAPBOX_API_TOKEN", "\"$mapboxApiToken\""
@@ -235,7 +235,7 @@ dependencies {
 
     //Hilt
     // For Robolectric tests.
-      testImplementation 'com.google.dagger:hilt-android-testing:2.35.1'
+    testImplementation 'com.google.dagger:hilt-android-testing:2.35.1'
     // ...with Kotlin.
     kaptTest 'com.google.dagger:hilt-android-compiler:2.35'
     // For instrumented tests.
@@ -254,8 +254,15 @@ dependencies {
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-places-v9:0.12.0'
 
     //Here Map
-    implementation(name:'HERE-sdk', ext:'aar')
+    implementation(name: 'HERE-sdk', ext: 'aar')
     implementation 'com.google.code.gson:gson:2.8.6'
+
+
+    //Easier Permission
+    implementation 'com.karumi:dexter:6.2.2'
+
+
+
 }
 secrets {
     // Optionally specify a different file name containing your secrets.
