--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-import dependencies.*
-
 buildscript {
     ext.kotlin_version = '1.5.0'
     ext.navigation_version = "2.3.5"
@@ -41,6 +39,7 @@ allprojects {
                 // Use the secret token you stored in gradle.properties as the password
                 password = sdkRegistryToken
             }
+            maven { url 'https://jitpack.io' }
         }
     }
 }
